--- a/socratic-frontend/public/index.html
+++ b/socratic-frontend/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/socratic-logo.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3498db" />
     <meta
       name="description"
       content="Socratic AI - Personalized learning assistant"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/socratic-logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
