--- a/socratic-frontend/public/index.html
+++ b/socratic-frontend/public/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3498db" />
     <meta
       name="description"
       content="Socratic AI - Personalized learning assistant"
     />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Socratic Learn" />
+    <meta property="og:description" content="Socratic AI - Personalized learning assistant" />
+    <meta property="og:image" content="%PUBLIC_URL%/social-logo.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:url" content="https://socratic-learn.com" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Socratic Learn" />
+    <meta name="twitter:description" content="Socratic AI - Personalized learning assistant" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/social-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
